--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
               cd ray
               git switch dev/secretflow-ray-2.2.0
               curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
-              sh ./python/build-wheel-macos.sh
+              sudo sh ./python/build-wheel-macos.sh
         - store_artifacts:
             path: .whl/*.whl
   linux_publish:
