--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,8 @@ jobs:
               brew install wget
               wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
               bash miniconda.sh -b -p $HOME/miniconda
+              $HOME/miniconda/bin/conda init bash
+              source ~/.bash_profile
               sh ./python/build-wheel-macos.sh
         - store_artifacts:
             path: .whl/*.whl
